# lg

./: .dockerignore  .gitignore  Dockerfile  README.md  commands.yaml  devices.yaml  docker-compose.yml  lg.Dockerfile  pyproject.toml  router.Dockerfile  start.sh
app/: main.py  utils.py
app/commands/: db.py  router.py  schema.py  service.py
app/core/: config.py  dependencies.py
app/db/: commands.py  devices.py
app/devices/: db.py  router.py  schema.py  service.py
app/routers/: commands.py  devices.py
app/schemas/: commands.py  devices.py
app/services/: commands.py  devices.py
frr-config/frr1/: frr1.conf
frr-config/frr2/: daemons  frr2.conf  vtysh.conf
lg-config/: commands.example.yaml  devices.example.yaml
